styles.css
h1 {
    font-family: 'Plus Jakarta Sans', sans-serif;
}
p {
    font-family: 'Plus Jakarta Sans', sans-serif;
}

.ping {
    width: 100px;
    font-family: 'Plus Jakarta Sans', sans-serif;
    font-weight: bold;

    display: float;
    text-decoration: bold;
   
    margin-right: auto;
    
}

.notifNum {
font-family: 'Plus Jakarta Sans', sans-serif;
 background-color: rgb(31, 31, 175);
margin-left: 4px;
display: float;

 font-size: .85em;
 padding-left: 7px;
 padding-right: 7px;
 padding-top: 2px;
 padding-bottom: 2px;
 border-radius: 25%;
 color: white;
}

.mark {
    width: 100px;
    font-family: 'Plus Jakarta Sans', sans-serif;
    display: float;
    float: right;
    
    padding: 0;
    border: none;
    background: none;
}

.name { /* Decoration for names of individuals */
    font-family: 'Plus Jakarta Sans', sans-serif;
    font-weight: bold;
    font-size: .95em;
    color: black;
}

.name:hover { /* Hover effect over names of individuals */
    color:rgb(31, 31, 175);
}

.header{ /* container for .ping .notifNum .mark (button) 
    To-do: Center this as floating divs meeting at center or alternative method*/
    display: table;
    align-items: center;
    align-content: center;
    justify-content: center;
}

img { /* profile pictures next to name */
    display: float;
    float: left;
    margin-right: auto;
    max-width: 3em;
    padding-right: 10px;
}

.note{ /*individual message parent*/
    font-family: 'Plus Jakarta Sans', sans-serif;
    font-size: .80em;

    display: float;
    align-items: center;
    justify-content: center;
    color: rgb(122, 123, 129);
    background-color: rgb(244, 249, 252);
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: 10px;
    padding-top: 16px;
    padding-bottom: 16px;
    max-width: 450px;
    border-radius: 6px;
    padding: 15px;    
}

.postGroup{
    font-weight: bold;
    color: rgb(34, 46, 85);
}

.postGroup:hover {
    color:rgb(31, 31, 175);
}

.bsmessage{
    
    display: block;
    margin-right: 10%;
    margin-left: 10%;

    padding-left: 10px;
    padding-right: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
    
}

.bsmessage:hover{
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
background-color:rgb(222, 235, 247);
color: rgb(122, 123, 129);
}

.list{
    display: block;
    justify-content: center;
    align-items: center;
    padding-top: 10px;
}

.time{
    display: flex;
    justify-content: left;
    align-content: flex-end;
    font-family: 'Plus Jakarta Sans', sans-serif;
    color: rgb(124, 124, 124);
    font-size: .8rem;
    padding-top: 2px;
}

#pictureRight {
    float: right;
    margin-top: -15px;
    margin-right: auto;
    margin-left: auto;
    padding: 0px 20px 0px 0px;
}

#pictureRight:hover{ /*QUESTION: white frame isn't wrapping around pictureRight. There is excess border length on the right of pictureRight */
    display: flex;
    flex-wrap: wrap;
    margin-right: auto;
    margin-left: auto;
    border: 2px solid white;

    border-radius: 6px;

}

.unreadDot {/* QUESTION: red dot to the right of every UNREAD .note*/
    display:block;
    border: 4px;
    border-radius: 25px;
    border-color: red;
}

.attribution { /* "challenge by frontend mentor text */

    font-family: 'Plus Jakarta Sans', sans-serif;
    font-size: 8px;
    display: flex;

    padding-top: 80px;
    padding-right: 10px;
    align-content: right;
    justify-content: right;
}

